--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -116,7 +116,7 @@
                 <ImageView
                     android:layout_width="80dp"
                     android:layout_height="80dp"
-                    android:src="@drawable/booknow"
+                    android:src="@drawable/book"
                     android:layout_gravity="center_horizontal"
                     android:id="@+id/booknow"/>
 
