--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,53 +1,98 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="#2f3887"
-    android:layout_height="match_parent">
-<LinearLayout
-    android:layout_width="match_parent"
+    android:background="#ffff"
     android:layout_height="match_parent"
     android:orientation="vertical"
-
     tools:context=".MainActivity">
 
 
+    <View
+        android:id="@+id/image"
+        android:layout_width="385dp"
+        android:layout_height="250dp"
+        android:layout_alignParentTop="true"
 
-    <ImageView
-        android:id="@+id/imageView4"
-        android:layout_marginTop="20dp"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_gravity="center"
-        app:srcCompat="@drawable/logo_white" />
+        android:background="@drawable/uni_image1" />
 
-    <ImageView
-        android:id="@+id/imageView3"
-        android:layout_marginTop="20dp"
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/university_"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:srcCompat="@drawable/urm_white" />
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
 
-    <com.google.android.gms.common.SignInButton
+        android:layout_below="@+id/image"
+        android:gravity="center"
+        android:text="@string/university_"
+        android:textAppearance="@style/university_"
+
+        />
+
+    <View
+        android:id="@+id/sign_in_btn1"
+        android:layout_width="114dp"
+        android:layout_height="114dp"
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="23dp"
+        android:layout_marginTop="26dp"
+       android:layout_gravity="center"
+        android:layout_alignParentTop="true"
+        android:layout_below="@+id/university_"
+        android:background="@drawable/google"
+        />
+
+    <TextView
         android:id="@+id/sign_in_button"
-        android:layout_marginTop="50dp"
-        android:layout_width="250dp"
-        android:layout_gravity="center"
-        android:layout_height="wrap_content"
-        android:background="@drawable/common_google_signin_btn_icon_dark_normal_background"/>
+        android:layout_width="230dp"
+        android:layout_height="40dp"
+        android:layout_alignParentLeft="true"
+       android:layout_gravity="center"
+        android:layout_alignParentTop="true"
+
+        android:text="@string/sign_in_wit"
+        android:textAppearance="@style/sign_in_wit"
+        android:gravity="center_horizontal|top"
+        />
 
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_marginTop="20dp"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
 
-        app:srcCompat="@drawable/charusat_new_logo" />
+    <!-- <LinearLayout
+     android:layout_width="match_parent"
+     android:layout_height="match_parent"
+     android:orientation="vertical"
+   >
 
+
+
+     <ImageView
+         android:id="@+id/imageView4"
+         android:layout_marginTop="20dp"
+         android:layout_width="100dp"
+         android:layout_height="100dp"
+         android:layout_gravity="center"
+         app:srcCompat="@drawable/logo_white" />
+
+     <ImageView
+         android:id="@+id/imageView3"
+         android:layout_marginTop="20dp"
+         android:layout_width="match_parent"
+         android:layout_height="wrap_content"
+         app:srcCompat="@drawable/urm_white" />
+
+     <com.google.android.gms.common.SignInButton
+         android:id="@+id/sign_in_button"
+         android:layout_width="250dp"
+         android:layout_gravity="center"
+         android:layout_height="wrap_content"
+         android:background="@drawable/common_google_signin_btn_icon_dark"/>
+
+
+
+
+
+ </LinearLayout>-->
 
 </LinearLayout>
-
-</ScrollView>
