--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,11 +1,132 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Base.Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme.NoActionBar" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+
     </style>
+    <style name="university_">
+
+        <item name="android:textSize">
+            36sp
+        </item>
+        
+        <item name="android:textColor">
+            #21824A
+        </item>
+
+    </style>
+
+    <style name="sign_in_wit">
+
+        <item name="android:textSize">
+            18sp
+        </item>
+
+        <item name="android:textColor">
+            #0C7839
+        </item>
+
+    </style>
+
+    <style name="welcome_">
+
+        <item name="android:textSize">
+            30sp
+        </item>
+
+        <item name="android:textColor">
+            #ffffff
+        </item>
+
+    </style>
+
+    <style name="schedule">
+
+        <item name="android:textSize">
+            24sp
+        </item>
+
+        <item name="android:textColor">
+            #000000
+        </item>
+
+    </style>
+
+    <style name="book_now">
+        <item name="android:textSize">
+            34sp
+        </item>
+        <item name="android:textColor">
+            #FFFFFF
+        </item>
+    </style>
+
+    <!-- book slot title -->
+    <style name="book_slot">
+        <item name="android:textSize">
+            20sp
+        </item>
+        <item name="android:textColor">
+            #03401C
+        </item>
+    </style>
+
+    <!-- Select date -->
+    <style name="select_date">
+        <item name="android:textSize">
+            20sp
+        </item>
+        <item name="android:textColor">
+            #03401C
+        </item>
+    </style>
+
+    <!--select time -->
+    <style name="time_slot">
+        <item name="android:textSize">
+            20sp
+        </item>
+        <item name="android:textColor">
+            #03401C
+        </item>
+    </style>
+
+    <!-- Select Department -->
+    <style name="department">
+        <item name="android:textSize">
+            20sp
+        </item>
+        <item name="android:textColor">
+            #03401C
+        </item>
+    </style>
+
+    <!-- Room Number -->
+    <style name="room_no">
+        <item name="android:textSize">
+            20sp
+        </item>
+        <item name="android:textColor">
+            #03401C
+        </item>
+    </style>
+
+    <!-- Description -->
+    <style name="description">
+        <item name="android:textSize">
+            20sp
+        </item>
+        <item name="android:textColor">
+            #03401C
+        </item>
+    </style>
+
+
+
+
 
 </resources>
