--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -20,12 +20,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
-
             <ImageView
+                android:layout_marginTop="5dp"
                 android:layout_width="60dp"
                 android:layout_height="60dp"
-                android:src="@drawable/logo_white"
-
+                android:layout_gravity="center"
+                android:src="@drawable/profile"
                 android:id="@+id/profile_img"/>
 
             <TextView
@@ -39,9 +39,7 @@
                 android:textAppearance="@style/welcome_"
                 android:lineSpacingExtra="0sp"
                 android:gravity="top"
-
                 />
-
 
             <TextView
                 android:id="@+id/textViewName"
@@ -50,20 +48,13 @@
                 android:layout_alignParentLeft="true"
                 android:layout_marginLeft="93dp"
                 android:layout_alignParentTop="true"
-                android:layout_marginTop="10dp"
                 android:lineSpacingExtra="0sp"
                 android:textColor=" #ffffff"
-                android:text="Name"
+                android:text="Name Here"
 
                 android:textSize="25sp" />
-
-
-
-
-
         </LinearLayout>
         <!--insert card view part here-->
-
     </RelativeLayout>
 
 
@@ -103,20 +94,19 @@
             <ImageView
                 android:layout_width="60dp"
                 android:layout_height="60dp"
-                android:src="@drawable/schedule_green"
+                android:src="@drawable/calendar"
                 android:layout_gravity="center_horizontal"
                 android:id="@+id/schedule"/>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
                 android:text="Schedule"
                 android:textColor="#000000"
                 android:textAlignment="center"
                 android:textSize="18sp"
                 />
-
-
 
         </LinearLayout>
 
@@ -143,7 +133,7 @@
             <ImageView
                 android:layout_width="60dp"
                 android:layout_height="60dp"
-                android:src="@drawable/book_green"
+                android:src="@drawable/booknow"
                 android:layout_gravity="center_horizontal"
                 android:id="@+id/book_now"/>
 
@@ -184,13 +174,14 @@
                 <ImageView
                     android:layout_width="60dp"
                     android:layout_height="60dp"
-                    android:src="@drawable/occupancy_green"
+                    android:src="@drawable/occupancy"
                     android:layout_gravity="center_horizontal"
                     android:id="@+id/occupancy"/>
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center"
                     android:text="Occupancy"
                     android:textAlignment="center"
                     android:textColor="#000000"
@@ -225,7 +216,7 @@
                 <ImageView
                     android:layout_width="60dp"
                     android:layout_height="60dp"
-                    android:src="@drawable/find_green"
+                    android:src="@drawable/find"
                     android:layout_gravity="center_horizontal"
                     android:id="@+id/find"/>
 
@@ -267,7 +258,7 @@
 
                     android:layout_width="60dp"
                     android:layout_height="60dp"
-                    android:src="@drawable/contactus_green"
+                    android:src="@drawable/contactus"
                     android:layout_gravity="center_horizontal"
                     android:id="@+id/contact"/>
 
@@ -276,6 +267,7 @@
                     android:layout_height="wrap_content"
                     android:text="Contact Us"
                     android:textAlignment="center"
+                    android:layout_gravity="center"
                     android:textColor="#000000"
                     android:textSize="18sp"
                     />
@@ -308,7 +300,7 @@
                 <ImageView
                     android:layout_width="60dp"
                     android:layout_height="60dp"
-                    android:src="@drawable/logout_green"
+                    android:src="@drawable/logout"
                     android:layout_gravity="center_horizontal"
                     android:id="@+id/logout_btn"/>
 
