--- a/app/src/main/res/layout/contactus.xml
+++ b/app/src/main/res/layout/contactus.xml
@@ -119,7 +119,7 @@ android:orientation="vertical">
             <ImageView
                 android:layout_width="36dp"
                 android:layout_height="36dp"
-                android:src="@drawable/sit"/>
+                android:src="@drawable/location"/>
 
             <TextView
                 android:id="@+id/Sitting"
@@ -201,7 +201,7 @@ android:orientation="vertical">
                 android:id="@+id/sitting1"
                 android:layout_width="36dp"
                 android:layout_height="36dp"
-                android:src="@drawable/sit"/>
+                android:src="@drawable/location"/>
             <TextView
                 android:id="@+id/sittingDEPSTAR"
                 android:textStyle="bold"
